--- a/content/orbittalk.mdx
+++ b/content/orbittalk.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Orbit Talk'
-subTitle: 'A web based chat app'
-summary: 'A Messaging app that allows friends to send messages to each other'
+subTitle: 'A messaging web app developed with React and Express'
+summary: 'A messaging web app that allows friends to send messages to each other'
 image: '/projects/orbittalk_1.png'
 date: '2023-8-1'
 ---
@@ -14,12 +14,15 @@ date: '2023-8-1'
   priority
 />
 
-The Orbit Talk Web App's frontend was constructed with React, Vite, 
-and Typescript, the backend used ExpressJS and MongoDB to create a 
-RESTful API. User authentication relied on JWT, so the authenticated 
-user can perform actions such as profile editing, password updates, 
-and friend management, alongside the primary feature of exchanging 
-messages with friends.
+Orbit Talk's frontend was developed with React and Typescript, 
+and the backend RESTful API was implemented with Express and MongoDB. 
+
+<Image
+  alt={`project screenshot - login screen`}
+  src={`/projects/orbittalk/login.png`}
+  width={2178 / 3}
+  height={1478 / 3}
+/>
 
 <Image
   alt={`project screenshot - profile screen`}
@@ -28,14 +31,9 @@ messages with friends.
   height={1478 / 3}
 />
 
-While Orbit Talk may not have featured real-time messaging capabilities, 
-it provided me with valuable learning experiences and opportunities to 
-develop essential skills.
-
-- Utilized React, Vite, and Typescript to build the app's user interface, I gained proficiency in these web development tools.
-- On the backend, I designed DB model, used mongoDB for data storage, and created RESTful API with ExpressJS, which improved my understanding on server side development.
-- Implementing JWT authentication enhanced my knowledge of user security measures in web applications.
-- I've learned and implemented Router testing with Jest and supertest for the API endpoints unit testing.
-- Through frontend testing, I gained familiarity with Vitest and React Testing Library.
-- I attempted to maintain a focus on accessibility for the app and learned more about web accessibility.
-- I also practiced project organization, task management, and version control throughout the development.
+- Used React and Typescript for frontend deveopment.
+- Backend RESTful API was implemented using Express and MongoDB.
+- Used JWT for user authentication.
+- Router testing with Jest and supertest for the API endpoints unit testing.
+- Vitest and React Testing Library for frontend testing.
+- Maintain a focus on accessibility for the app and learned more about web accessibility.
