updated blog site

--- a/content/nextjs-blog.mdx
+++ b/content/nextjs-blog.mdx
@@ -8,9 +8,9 @@ date: '2023-12-01'
 
 <Image
   alt={`next.js blog screenshot`}
-  src={`/projects/blog/home.png`}
-  width={1222 / 3}
-  height={936 / 3}
+  src={`/projects/blog/blog-home.png`}
+  width={2312 / 3}
+  height={1624 / 3}
   priority
 />
 
@@ -18,21 +18,20 @@ This is my personal development blog. It started from a Next.js template, and ev
 
 <Image
   alt={`next.js blog screenshot`}
-  src={`/projects/blog/pagination.png`}
-  width={1222 / 3}
-  height={936 / 3}
-  priority
+  src={`/projects/blog/about.png`}
+  width={2220 / 3}
+  height={1608 / 3}
 />
 
 <Image
   alt={`next.js blog screenshot`}
   src={`/projects/blog/contact.png`}
-  width={1222 / 3}
-  height={936 / 3}
-  priority
+  width={2198 / 3}
+  height={1612 / 3}
 />
 
 - Used Next.js page router and Static Site Generation.
+- Styled with TailwindCSS.
 - The content is written with MDX, and is loaded using *next-mdx-remote*.
 - Implemented pagination with SSG.
 - Contact Form is implemented using API Routes and the data is stored in Vercel Postgres.
