updated content formatting

--- a/content/easylunchprep.mdx
+++ b/content/easylunchprep.mdx
@@ -37,14 +37,13 @@ Currently, work is focused mostly on:
 - CSS Modules
 - TanStack Query
 
-## Screenshots:
+## Screenshots
 
 <Image
   alt={`project screenshot - user dashboard`}
   src={`/projects/easylunchprep/user-dashboard.png`}
   width={1098 / 2}
   height={974 / 2}
-  priority
 />
 
 <Image
