--- a/content/orbittalk.mdx
+++ b/content/orbittalk.mdx
@@ -6,16 +6,39 @@ image: '/projects/orbittalk_1.png'
 date: '2023-09-01'
 ---
 
-<Image
-  alt={`project screenshot - chat screen`}
-  src={`/projects/orbittalk/chat.png`}
-  width={2154 / 3}
-  height={1448 / 3}
-  priority
-/>
+Orbit Talk is a messaging web app that enables users to send messages to each other. 
+The frontend is built with React and TypeScript, while the backend is powered by 
+a RESTful API implemented using Express and MongoDB. The app uses JWT for secure user authentication 
+and focuses on web accessibility throughout the development process.
 
-Orbit Talk's frontend was developed with React and Typescript, 
-and the backend RESTful API was implemented with Express and MongoDB. 
+## Key Features
+
+- Users can send messages to their friends in a chat interface.
+- User authentication is handled with JWT for secure login and session management.
+- Backend implemented with Express and MongoDB, providing a RESTful API.
+- Frontend developed with React and TypeScript for a robust user experience.
+- Accessibility was a key focus, ensuring the app is usable for a wide range of users.
+- API endpoint unit testing with Jest and Supertest.
+- Frontend testing with Vitest and React Testing Library.
+
+## Technologies Used
+
+### Frontend:
+- React
+- TypeScript
+- Vitest
+- React Testing Library
+
+### Backend:
+- Express
+- MongoDB
+- JWT (JSON Web Token)
+
+### Testing:
+- Jest
+- Supertest
+
+## Screenshots
 
 <Image
   alt={`project screenshot - login screen`}
@@ -25,15 +48,15 @@ and the backend RESTful API was implemented with Express and MongoDB.
 />
 
 <Image
+  alt={`project screenshot - chat screen`}
+  src={`/projects/orbittalk/chat.png`}
+  width={2154 / 3}
+  height={1448 / 3}
+/>
+
+<Image
   alt={`project screenshot - profile screen`}
   src={`/projects/orbittalk/profile.png`}
   width={2178 / 3}
   height={1478 / 3}
 />
-
-- Used React and Typescript for frontend deveopment.
-- Backend RESTful API was implemented using Express and MongoDB.
-- Used JWT for user authentication.
-- Router testing with Jest and supertest for the API endpoints unit testing.
-- Vitest and React Testing Library for frontend testing.
-- Maintain a focus on accessibility for the app and learned more about web accessibility.
