--- a/content/the-odin-catalog.mdx
+++ b/content/the-odin-catalog.mdx
@@ -6,15 +6,29 @@ image: '/projects/catalog.png'
 date: ''
 ---
 
+The Odin Catalog is a personal project showcasing my learning journey with The Odin Project. 
+This catalog documents the various projects and skills I’ve acquired throughout the course. 
+It was built using Vite, HTML, TailwindCSS, and TypeScript for fast development and a responsive user experience.
+
+## Key Features
+
+- A collection of projects and exercises completed during my time with The Odin Project.
+- Responsive design with TailwindCSS for a clean layout.
+- Fast build and development process with Vite.
+- Structured using TypeScript for type safety and maintainability.
+
+## Technologies Used
+
+- Vite
+- HTML
+- TailwindCSS
+- TypeScript
+
+## Screenshots
+
 <Image
   alt={`project screenshot - the odin catalog`}
   src={`/projects/catalog/catalog.png`}
   width={2154 / 3}
   height={1448 / 3}
-  priority
 />
-
-
-This project catalog recorded my learning journey with The Odin Project. 
-
-It was built with Vite, HTML, TailwindCSS, and Typescript.
