--- a/content/nextjs-blog.mdx
+++ b/content/nextjs-blog.mdx
@@ -6,15 +6,34 @@ image: '/projects/blog.png'
 date: '2023-12-01'
 ---
 
+A blog built with Next.js and MDX, utilizing the Next.js page router and Static Site Generation (SSG) 
+for optimized performance. The content is written with MDX and loaded using `next-mdx-remote`. 
+The blog is styled with TailwindCSS, and features include pagination, a contact form, 
+and integration with Vercel Postgres for data storage.
+
+## Key Features
+
+- Blog content is written in MDX and loaded using `next-mdx-remote`.
+- Utilized Static Site Generation (SSG) for fast, SEO-friendly pages.
+- Pagination implemented for efficient content navigation.
+- Contact form powered by API Routes, with data stored in Vercel Postgres.
+
+## Technologies Used
+
+- Next.js (Page Router, Static Site Generation)
+- React
+- MDX (via `next-mdx-remote`)
+- TailwindCSS
+- Vercel Postgres (for contact form data)
+
+## Screenshots
+
 <Image
   alt={`next.js blog screenshot`}
   src={`/projects/blog/blog-home.png`}
   width={2312 / 3}
   height={1624 / 3}
-  priority
 />
-
-This is my personal development blog. It started from a Next.js template, and evolved over time. 
 
 <Image
   alt={`next.js blog screenshot`}
@@ -29,9 +48,3 @@ This is my personal development blog. It started from a Next.js template, and ev
   width={2198 / 3}
   height={1612 / 3}
 />
-
-- Used Next.js page router and Static Site Generation.
-- Styled with TailwindCSS.
-- The content is written with MDX, and is loaded using *next-mdx-remote*.
-- Implemented pagination with SSG.
-- Contact Form is implemented using API Routes and the data is stored in Vercel Postgres.
